--- a/frontend/assets/css/Article-Clean.css
+++ b/frontend/assets/css/Article-Clean.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #F7DEEB;
+}
+
 .article-clean {
   color: #56585b;
   background-color: #fff;
@@ -81,4 +85,3 @@
   margin-bottom: 12px;
   max-width: 100%;
 }
-
