--- a/frontend/assets/css/Contact-Form-Clean.css
+++ b/frontend/assets/css/Contact-Form-Clean.css
@@ -1,6 +1,6 @@
 .contact-clean {
-  background: #f1f7fc;
-  padding: 80px 0;
+  background: #fff;
+  padding: 0px 0;
 }
 
 @media (max-width:767px) {
@@ -16,8 +16,8 @@
   background-color: #ffffff;
   padding: 40px;
   border-radius: 4px;
-  color: #505e6c;
-  box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
+  color: #000;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width:767px) {
@@ -37,7 +37,7 @@
 .contact-clean form .form-control {
   background: #fff;
   border-radius: 2px;
-  box-shadow: 1px 1px 1px rgba(0,0,0,0.05);
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.05);
   outline: none;
   color: inherit;
   padding-left: 12px;
@@ -83,4 +83,3 @@
   margin-top: 15px;
   color: #fff;
 }
-
